# mlp_tools

./: README.md  pyproject.toml  setup.py
data/: Table_I.csv  YT_ref_data.csv
mlptools/analyzer/: cohesive_energy.py  depth_profile.py  elastic.py  ml_metrics.py  nearest_neighbor.py  pair_potential.py  sputtering_yield.py  symmetry_function.py  yamamura_tawara.py
mlptools/atoms/: atom.py  extract_atoms.py  test.ipynb
mlptools/config/: symmetry_function.py
mlptools/data/: artificial_dimer.py  structures.py
mlptools/db/: db.py  model.py
mlptools/descriptor/: dp.py
mlptools/io/: parser.py  read.py  write.py
mlptools/utils/: constants.py  utils.py
notebooks/: analyze_dp_descriptor_from_lmp.ipynb  test_read.ipynb
notebooks/analyze/: calc_cohesive_energy.ipynb  check_zero_point_energy.ipynb  count_atom_during_simulation.ipynb  get_depth_profile.ipynb  get_mlpatoms_from_lmp_dump.ipynb  get_surface_atoms_from_lmp_dump.ipynb  many-body-analysis.ipynb  mechanical_props.ipynb  nearest_neighbor.ipynb  pca_symmetry_function.ipynb  plot_SY.ipynb  plot_energy_distribution.ipynb  plot_qe_two_body_potential.ipynb  plot_relax_trajectory.ipynb  plot_sp_with_ion_dose.ipynb  plot_training_data_n2p2.ipynb  plot_two_body_potential.ipynb  repulsive_potential.ipynb  save_n2p2_prediction.ipynb  select_symmety_functions.ipynb  sp_with_number_of_amorphous_data.ipynb  sputtering.ipynb  sputtering_yield_with_size_of_substrate.ipynb  three_body.ipynb  visualize_atoms.ipynb  yamamura_tawara.ipynb
notebooks/atom/: check_mlpatoms_pkl.ipynb  (+2 more)
scripts_on_squid/: calc_elastic.py  cohesive_energy.ipynb  elastic.ipynb  n2p2_score.ipynb
(+40 files in other folders)
