[tool.poetry]
name = "mlp_tools"
version = "0.1.0"
description = ""
authors = ["y1u0d2a1i <y1u0d2a1i@icloud.com>"]
readme = "README.md"
packages = [{include = "mlptools"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
numpy = "^1.25.0"
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
ase = "^3.22.1"
pymatgen = "^2023.6.28"
ovito = "^3.8.5"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
